Fixed the collapse button issue for needs.

--- a/sphinx_needs/css/dark/styles.css
+++ b/sphinx_needs/css/dark/styles.css
@@ -115,3 +115,7 @@ table.needs_style_yellow_bar {
 table.needs_style_blue_bar {
     background: linear-gradient(to right, transparent 90%, #0fbcf9 10%);
 }
+
+.is_visible{
+    display: none;
+}
