--- a/sphinx_needs/css/modern/styles.css
+++ b/sphinx_needs/css/modern/styles.css
@@ -124,3 +124,6 @@ table.needs_style_yellow_bar {
 table.needs_style_blue_bar {
     background: linear-gradient(to right, transparent 90%, #0fbcf9 10%);
 }
+.is_visible{
+    display: none;
+}
